--- a/SASMobileApp1/SASMobileApp1.iOS/SASMobileApp1.iOS.csproj
+++ b/SASMobileApp1/SASMobileApp1.iOS/SASMobileApp1.iOS.csproj
@@ -57,6 +57,9 @@
     <MtouchVerbosity>2</MtouchVerbosity>
 <CodesignKey>iPhone Developer</CodesignKey>
 <CodesignProvision>iOS Team Provisioning Profile: *</CodesignProvision>
+<MtouchSdkVersion>13.2</MtouchSdkVersion>
+<MtouchArch>ARMv7, ARM64</MtouchArch>
+<MtouchHttpClientHandler>HttpClientHandler</MtouchHttpClientHandler>
   </PropertyGroup>
   <PropertyGroup Condition=" '$(Configuration)|$(Platform)' == 'Release|iPhone' ">
     <DebugType>none</DebugType>
