--- a/SASMobileApp1/SASMobileApp1/SASMobileApp1.csproj
+++ b/SASMobileApp1/SASMobileApp1/SASMobileApp1.csproj
@@ -53,4 +53,7 @@
   <ItemGroup>
     <Folder Include="Converters\" />
   </ItemGroup>
+  <ItemGroup>
+    <None Include="**/*" />
+  </ItemGroup>
 </Project>
