--- a/SASMobileApp1/SASMobileApp1.iOS/SASMobileApp1.iOS.csproj
+++ b/SASMobileApp1/SASMobileApp1.iOS/SASMobileApp1.iOS.csproj
@@ -23,11 +23,12 @@
     <ErrorReport>prompt</ErrorReport>
     <WarningLevel>4</WarningLevel>
     <ConsolePause>false</ConsolePause>
-    <MtouchArch>i386, x86_64</MtouchArch>
+    <MtouchArch>x86_64</MtouchArch>
     <MtouchLink>SdkOnly</MtouchLink>
     <MtouchDebug>true</MtouchDebug>
     <MtouchSdkVersion>13.2</MtouchSdkVersion>
     <MtouchFloat32>true</MtouchFloat32>
+<CodesignKey>iPhone Developer</CodesignKey>
   </PropertyGroup>
   <PropertyGroup Condition=" '$(Configuration)|$(Platform)' == 'Release|iPhoneSimulator' ">
     <DebugType>none</DebugType>
@@ -58,8 +59,9 @@
 <CodesignKey>iPhone Developer</CodesignKey>
 <CodesignProvision>iOS Team Provisioning Profile: *</CodesignProvision>
 <MtouchSdkVersion>13.2</MtouchSdkVersion>
-<MtouchArch>ARMv7, ARM64</MtouchArch>
+<MtouchArch>ARMv7, ARMv7s, ARM64</MtouchArch>
 <MtouchHttpClientHandler>HttpClientHandler</MtouchHttpClientHandler>
+<MtouchFloat32>true</MtouchFloat32>
   </PropertyGroup>
   <PropertyGroup Condition=" '$(Configuration)|$(Platform)' == 'Release|iPhone' ">
     <DebugType>none</DebugType>
@@ -211,10 +213,10 @@
   </ItemGroup>
   <ItemGroup>
     <PackageReference Include="Microsoft.CSharp">
-      <Version>4.7.0-preview2.19523.17</Version>
+      <Version>4.7.0</Version>
     </PackageReference>
-    <PackageReference Include="Xamarin.Forms" Version="4.3.0.947036" />
-    <PackageReference Include="Prism.Unity.Forms" Version="7.2.0.1367" />
+    <PackageReference Include="Xamarin.Forms" Version="4.4.0.991640" />
+    <PackageReference Include="Prism.Unity.Forms" Version="7.2.0.1422" />
   </ItemGroup>
   <ItemGroup>
     <Reference Include="Xamarin.iOS" />
